# tech-recruiter-forwarder

./: .gitignore  README.md  config.example.toml  pyproject.toml
docs/superpowers/plans/: 2026-04-29-recruiter-email-forwarder.md
docs/superpowers/specs/: 2026-04-29-recruiter-email-forwarder-design.md
scripts/: com.evanc.recruiter-forwarder.plist.template  install-launchd.sh  uninstall-launchd.sh
src/recruiter_forwarder/: classifier.py  config.py  gmail.py  main.py
