[project]
name = "recruiter-forwarder"
version = "0.1.0"
description = "Forward tech-recruiter emails from personal Gmail to a configurable recipient."
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "google-api-python-client>=2.150.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
recruiter-forwarder = "recruiter_forwarder.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/recruiter_forwarder"]
